.golden/2157463209259933381/golden

INITIALPATH:7:11: error:
    • INITIALPATH:7:14:
  |
7 | main = [f|foo\Pbar|]
  |              ^
lexical error in literal section

    • In the quasi-quotation: [f|foo\Pbar|]
  |
7 | main = [f|foo\Pbar|]
  |           ^^^^^^^^^^
